ci: avoid pip installs; expose libneo via PYTHONPATH and run pytest

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,9 @@ jobs:
         run: |
           cd build && ctest --output-on-failure
 
-      - name: Ensure pytest is available
+      - name: Expose libneo to Python (editable-like)
         run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install pytest
+          echo "PYTHONPATH=$PWD/python" >> $GITHUB_ENV
 
       - name: Run Python tests (pytest)
         run: |
