ci: revert to quieter defaults (ctest --output-on-failure, pytest -q) per preference

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,15 +24,15 @@ jobs:
         run: |
           make
 
-      - name: Test (CTest, verbose on failure)
+      - name: Test
         run: |
-          cd build && ctest --output-on-failure -V
+          cd build && ctest --output-on-failure
 
       - name: Editable install of libneo (system-wide)
         run: |
           python3 -m pip install --break-system-packages -r requirements.txt
           python3 -m pip install --break-system-packages -e .
 
-      - name: Run Python tests (pytest, verbose on errors)
+      - name: Run Python tests (pytest)
         run: |
-          pytest -vv -ra --maxfail=1
+          pytest -q
