--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -270,6 +270,7 @@ add_custom_command(
         --f2cmap ${CMAKE_CURRENT_SOURCE_DIR}/.f2py_f2cmap
         "${CMAKE_CURRENT_SOURCE_DIR}/src/f2py_interfaces/f2py_magfie.f90"
         "${CMAKE_CURRENT_SOURCE_DIR}/src/f2py_interfaces/f2py_vmec_wrappers.f90"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/magfie/magfie_vmec.f90"
         -m _magfie --lower
 )
 
@@ -279,6 +280,7 @@ Python_add_library(_magfie WITH_SOABI
     "${CMAKE_CURRENT_BINARY_DIR}/_magfie-f2pywrappers2.f90"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/f2py_interfaces/f2py_magfie.f90"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/f2py_interfaces/f2py_vmec_wrappers.f90"
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/magfie/magfie_vmec.f90"
 )
 
 target_link_libraries(_magfie PUBLIC fortranobject magfie neo)
