Install SciPy before running CTest

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
         run: |
           git config --global --add safe.directory `pwd`
 
+      - name: Install Python dependencies
+        run: |
+          python3 -m pip install --break-system-packages -r requirements.txt
       - name: Build
         run: |
           make
