Add geoflux coordinates with cached surface transform

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -64,6 +64,11 @@ target_link_libraries(test_geqdsk_tools.x
   ${MAGFIE_LIB}
 )
 
+add_executable(test_geoflux.x source/test_geoflux.f90)
+target_link_libraries(test_geoflux.x
+  ${COMMON_LIBS}
+)
+
 add_executable(test_simpson.x source/test_simpson.f90)
 target_link_libraries(test_simpson.x
   ${COMMON_LIBS}
@@ -114,6 +119,7 @@ add_fortran_test(test_binsrc)
 add_fortran_test(test_boozer_class)
 add_fortran_test(test_efit_class)
 add_fortran_test(test_geqdsk_tools)
+add_fortran_test(test_geoflux)
 add_fortran_test(test_simpson)
 add_fortran_test(test_hdf5_tools)
 add_fortran_test(test_util)
