Make Python bindings optional and link geoflux test against magfie

--- a/src/efit_to_boozer/CMakeLists.txt
+++ b/src/efit_to_boozer/CMakeLists.txt
@@ -75,20 +75,17 @@ target_link_libraries(efit_to_boozer
 )
 
 # Grab Python
-find_package(
-  Python
-  COMPONENTS Interpreter Development.Module NumPy
-  REQUIRED)
+find_package(Python COMPONENTS Interpreter Development NumPy)
 
-if (Python_FOUND)
-    message(STATUS "Python found: ${Python_EXECUTABLE}")
-    message(STATUS "Python version: ${Python_VERSION}")
-    message(STATUS "Python include dirs: ${Python_INCLUDE_DIRS}")
-    message(STATUS "Python libraries: ${Python_LIBRARIES}")
-else()
-    message("Python with NumPy not found, skipping interface build.")
+if (NOT Python_FOUND OR NOT Python_Development_FOUND OR NOT Python_NumPy_FOUND)
+    message(STATUS "Python with Development and NumPy support not found; skipping efit_to_boozer Python module build.")
     return()
 endif()
+
+message(STATUS "Python found: ${Python_EXECUTABLE}")
+message(STATUS "Python version: ${Python_VERSION}")
+message(STATUS "Python include dirs: ${Python_INCLUDE_DIRS}")
+message(STATUS "Python libraries: ${Python_LIBRARIES}")
 
 # F2PY headers
 execute_process(
