Add geoflux field wrapper and extend geoflux test

--- a/src/magfie/CMakeLists.txt
+++ b/src/magfie/CMakeLists.txt
@@ -17,6 +17,8 @@ add_library(magfie STATIC
     magfield_mod.f90
     polylag_3.f90
     magfie_cyl.f90
+    ../coordinates/geoflux_coordinates.f90
+    geoflux_field.f90
     geqdsk_tools.f90
     coil_tools.f90
     ../fftw3.F90
@@ -32,4 +34,3 @@ target_link_libraries(magfie PRIVATE
 set_property(TARGET neo_field PROPERTY
     INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Fortran_MODULE_DIRECTORY})
 add_library(LIBNEO::magfie ALIAS magfie)
-
