--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -27,6 +27,7 @@ add_library(neo STATIC
     src/binsrc.f90
     src/boozer_converter.f90
     src/magfie/magfie_vmec.f90
+    src/util/simpson_integration.f90
 
     # For CPU time measurements
     src/local_rusage.c
