--- a/test/magfie/test_data/vacfield_AUG_lowres.in
+++ b/test/magfie/test_data/vacfield_AUG_lowres.in
@@ -3,12 +3,12 @@
   Rmax = 267.0d0
   Zmin = -154.0d0
   Zmax = 150.4d0
-  nR = 16
-  nZ = 32
-  nphi = 64
+  nR = 64
+  nZ = 128
+  nphi = 256
   nmax = 8
   prefactor = 5.0e-1
   min_distance = 0.0
   max_eccentricity = 1.0
-  use_convex_wall = .false.
+  use_convex_wall = .true.
 /
