--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -281,12 +281,14 @@ add_custom_command(
         src/f2py_interfaces/f2py_magfie.f90
         src/f2py_interfaces/f2py_vmec_wrappers.f90
         src/f2py_interfaces/f2py_vmec_support.f90
+        src/f2py_interfaces/f2py_biotsavart.f90
     VERBATIM
     COMMAND "${Python_EXECUTABLE}" -m numpy.f2py
         --f2cmap ${CMAKE_CURRENT_SOURCE_DIR}/.f2py_f2cmap
         "${CMAKE_CURRENT_SOURCE_DIR}/src/f2py_interfaces/f2py_magfie.f90"
         "${CMAKE_CURRENT_SOURCE_DIR}/src/f2py_interfaces/f2py_vmec_wrappers.f90"
         "${CMAKE_CURRENT_SOURCE_DIR}/src/f2py_interfaces/f2py_vmec_support.f90"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/f2py_interfaces/f2py_biotsavart.f90"
         "${CMAKE_CURRENT_SOURCE_DIR}/src/magfie/magfie_vmec.f90"
         -m _magfie --lower
 )
@@ -298,9 +300,10 @@ Python_add_library(_magfie WITH_SOABI
     "${CMAKE_CURRENT_SOURCE_DIR}/src/f2py_interfaces/f2py_magfie.f90"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/f2py_interfaces/f2py_vmec_wrappers.f90"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/f2py_interfaces/f2py_vmec_support.f90"
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/f2py_interfaces/f2py_biotsavart.f90"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/magfie/magfie_vmec.f90"
 )
 
-target_link_libraries(_magfie PUBLIC fortranobject magfie neo interpolate)
+target_link_libraries(_magfie PUBLIC fortranobject magfie neo interpolate neo_field)
 add_dependencies(_magfie neo)
 install(TARGETS _magfie DESTINATION .)
