--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,13 @@ jobs:
         run: |
           cd build && ctest --output-on-failure
 
+      - name: Upload GEQDSK plots
+        uses: actions/upload-artifact@v4
+        with:
+          name: geqdsk-plots
+          path: build/test_artifacts/*.png
+          if-no-files-found: ignore
+
       - name: Editable install of libneo (system-wide)
         run: |
           python3 -m pip install --break-system-packages -r requirements.txt
