--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -19,6 +19,7 @@ add_library(neo STATIC
     src/canonical_coordinates_mod.f90
     src/nctools_module.f90
     src/new_vmec_allocation_stuff.f90
+    src/coordinates/cylindrical_cartesian.f90
     src/coordinates/vmec_coordinates.f90
     src/spline_vmec_data.f90
     src/vmecinm_m.f90
