Add LIBNEO_ENABLE_TESTS option to gate test registration

--- a/src/efit_to_boozer/CMakeLists.txt
+++ b/src/efit_to_boozer/CMakeLists.txt
@@ -16,7 +16,10 @@ set (efit_to_boozer_VERSION_MINOR 0)
 set (efit_to_boozer_VERSION_PATCH 3)
 
 enable_language(C Fortran)
-enable_testing()
+
+if(LIBNEO_ENABLE_TESTS)
+    enable_testing()
+endif()
 
 if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "GNU")
 
