Add test toggle option (#133)
### **User description**
## Summary
- introduce LIBNEO_ENABLE_TESTS (default ON) so downstreams can disable
test registration
- guard enable_testing() usage and skip add_subdirectory(test) when the
toggle is off
- reuse the toggle inside efit_to_boozer to avoid enabling tests
implicitly

## Testing
- cmake -S . -B build -DLIBNEO_ENABLE_TESTS=OFF
- ctest -N


___

### **PR Type**
Enhancement


___

### **Description**
- Add `LIBNEO_ENABLE_TESTS` CMake option to control test building

- Guard `enable_testing()` and test subdirectory inclusion

- Allow downstream projects to disable tests when needed


___

### Diagram Walkthrough


```mermaid
flowchart LR
  A["CMake Configuration"] --> B["LIBNEO_ENABLE_TESTS Option"]
  B --> C["enable_testing()"]
  B --> D["add_subdirectory(test)"]
  C --> E["Test Registration"]
  D --> E
```



<details> <summary><h3> File Walkthrough</h3></summary>

<table><thead><tr><th></th><th align="left">Relevant
files</th></tr></thead><tbody><tr><td><strong>Configuration
changes</strong></td><td><table>
<tr>
  <td>
    <details>
<summary><strong>CMakeLists.txt</strong><dd><code>Add test toggle option
and guards</code>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </dd></summary>
<hr>

CMakeLists.txt

<ul><li>Add <code>LIBNEO_ENABLE_TESTS</code> option with default ON<br>
<li> Guard <code>enable_testing()</code> call with option check<br> <li>
Conditionally include test subdirectory based on option</ul>


</details>


  </td>
<td><a
href="https://github.com/itpplasma/libneo/pull/133/files#diff-1e7de1ae2d059d21e1dd75d5812d5a34b0222cef273b7c3a2af62eb747f9d20a">+8/-2</a>&nbsp;
&nbsp; &nbsp; </td>

</tr>

<tr>
  <td>
    <details>
<summary><strong>CMakeLists.txt</strong><dd><code>Guard enable_testing
call consistently</code>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
&nbsp; &nbsp; &nbsp; &nbsp; 

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # List of source files are in CMakeSources.in.
 
 # Basic cmake settings/requirements
-cmake_minimum_required(VERSION 3.18)
+cmake_minimum_required(VERSION 3.22)
 if(APPLE AND NOT DEFINED HDF5_DIR)
   # locate brew
   find_program(BREW_EXECUTABLE brew HINTS /opt/homebrew/bin /usr/local/bin)
@@ -22,6 +22,8 @@ endif()
 
 # Basic project settings.
 project(libneo)
+
+option(LIBNEO_ENABLE_TESTS "Build libneo tests" ON)
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/Modules/")
@@ -57,7 +59,9 @@ set(libneo_VERSION_MINOR 08)
 set(libneo_VERSION_PATCH 20)
 
 enable_language(C Fortran)
-enable_testing()
+if(LIBNEO_ENABLE_TESTS)
+    enable_testing()
+endif()
 
 option(ENABLE_OPENMP "Enable OpenMP compiler flags." ON)
 
@@ -201,7 +205,9 @@ add_executable(hamada_to_boozer.x
 target_link_libraries(hamada_to_boozer.x efit_to_boozer)
 
 
-add_subdirectory(test)
+if(LIBNEO_ENABLE_TESTS)
+    add_subdirectory(test)
+endif()
 
 
 # MacOS RPATH specifics
