--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ concurrency:
 jobs:
   GNU:
     runs-on: ubuntu-22.04
+    env:
+      LIBNEO_TESTING: "1"
     container:
       image: ghcr.io/itpplasma/devel:latest
       options: --user root
