--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,15 +14,23 @@ include_directories(${MPI_Fortran_INCLUDE_PATH})
 # Assumes previous include of hdf5_tools/CMakeLists.txt for find_package
 include_directories(${HDF5_INCLUDE_DIRS})
 
+set(LIBNEO_TESTING_ENABLED OFF)
+if(DEFINED ENV{LIBNEO_TESTING})
+  string(STRIP "$ENV{LIBNEO_TESTING}" _libneo_testing_raw)
+  string(TOLOWER "${_libneo_testing_raw}" _libneo_testing_value)
+  if(NOT _libneo_testing_value STREQUAL ""
+      AND NOT _libneo_testing_value STREQUAL "0"
+      AND NOT _libneo_testing_value STREQUAL "false"
+      AND NOT _libneo_testing_value STREQUAL "no"
+      AND NOT _libneo_testing_value STREQUAL "off")
+    set(LIBNEO_TESTING_ENABLED ON)
+  endif()
+endif()
+
 find_package(Python COMPONENTS Interpreter)
 if (NOT Python_FOUND)
   message(FATAL_ERROR "Python interpreter required for GEQDSK scripts")
 endif()
-
-set(TEST_DATA_DIR ${CMAKE_BINARY_DIR}/test_data)
-file(MAKE_DIRECTORY ${TEST_DATA_DIR})
-set(TEST_ARTIFACT_DIR ${CMAKE_BINARY_DIR}/test_artifacts)
-file(MAKE_DIRECTORY ${TEST_ARTIFACT_DIR})
 
 execute_process(COMMAND nf-config --flibs
                 OUTPUT_VARIABLE NETCDF_LIBRARIES
@@ -74,17 +82,24 @@ target_link_libraries(test_geqdsk_tools.x
   ${MAGFIE_LIB}
 )
 
-add_executable(test_geoflux.x source/test_geoflux.f90)
-target_link_libraries(test_geoflux.x
-  ${COMMON_LIBS}
-  ${MAGFIE_LIB}
-)
+if(LIBNEO_TESTING_ENABLED)
+  set(TEST_DATA_DIR ${CMAKE_BINARY_DIR}/test_data)
+  file(MAKE_DIRECTORY ${TEST_DATA_DIR})
+  set(TEST_ARTIFACT_DIR ${CMAKE_BINARY_DIR}/test_artifacts)
+  file(MAKE_DIRECTORY ${TEST_ARTIFACT_DIR})
 
-add_executable(geoflux_coord_dump.x source/geoflux_coord_dump.f90)
-target_link_libraries(geoflux_coord_dump.x
-  ${COMMON_LIBS}
-  ${MAGFIE_LIB}
-)
+  add_executable(test_geoflux.x source/test_geoflux.f90)
+  target_link_libraries(test_geoflux.x
+    ${COMMON_LIBS}
+    ${MAGFIE_LIB}
+  )
+
+  add_executable(geoflux_coord_dump.x source/geoflux_coord_dump.f90)
+  target_link_libraries(geoflux_coord_dump.x
+    ${COMMON_LIBS}
+    ${MAGFIE_LIB}
+  )
+endif()
 
 add_executable(test_simpson.x source/test_simpson.f90)
 target_link_libraries(test_simpson.x
@@ -145,31 +160,33 @@ add_fortran_test(test_collision_freqs)
 add_fortran_test(test_transport)
 add_fortran_test(test_vmec_modules)
 
-add_test(
-  NAME test_geoflux
-  COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/run_geoflux_test.py
-          --exe $<TARGET_FILE:test_geoflux.x>
-          --data-dir ${TEST_DATA_DIR}
-)
+if(LIBNEO_TESTING_ENABLED)
+  add_test(
+    NAME test_geoflux
+    COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/run_geoflux_test.py
+            --exe $<TARGET_FILE:test_geoflux.x>
+            --data-dir ${TEST_DATA_DIR}
+  )
 
-add_test(
-  NAME test_geqdsk_plot
-  COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/geqdsk_plot.py
-          --data-dir ${TEST_DATA_DIR}
-          --output-dir ${TEST_ARTIFACT_DIR}
-          --basename geqdsk
-)
-set_tests_properties(test_geqdsk_plot PROPERTIES DEPENDS test_geoflux)
+  add_test(
+    NAME test_geqdsk_plot
+    COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/geqdsk_plot.py
+            --data-dir ${TEST_DATA_DIR}
+            --output-dir ${TEST_ARTIFACT_DIR}
+            --basename geqdsk
+  )
+  set_tests_properties(test_geqdsk_plot PROPERTIES DEPENDS test_geoflux)
 
-add_test(
-  NAME test_geoflux_plot
-  COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/geoflux_plot.py
-          --exe $<TARGET_FILE:geoflux_coord_dump.x>
-          --data-dir ${TEST_DATA_DIR}
-          --output-dir ${TEST_ARTIFACT_DIR}
-          --basename geoflux
-)
-set_tests_properties(test_geoflux_plot PROPERTIES DEPENDS test_geoflux)
+  add_test(
+    NAME test_geoflux_plot
+    COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/geoflux_plot.py
+            --exe $<TARGET_FILE:geoflux_coord_dump.x>
+            --data-dir ${TEST_DATA_DIR}
+            --output-dir ${TEST_ARTIFACT_DIR}
+            --basename geoflux
+  )
+  set_tests_properties(test_geoflux_plot PROPERTIES DEPENDS test_geoflux)
+endif()
 
 ## Custom tests
 
